--- a/app/Makefile
+++ b/app/Makefile
@@ -1,4 +1,4 @@
-MAKE = make
+TOPDIR = ..
 SUBDIRS := $(shell find . -maxdepth 1 -type d)
 SUBDIRS := $(basename $(patsubst ./%, %, $(SUBDIRS)))
 
@@ -6,13 +6,5 @@ DISABLED_APPS = smoke_test
 
 SUBDIRS := $(filter-out $(DISABLED_APPS), $(SUBDIRS))
 
-.PHONY : all $(SUBDIRS) clean
-all : $(SUBDIRS)
-	@echo compile all subdirectories: $(SUBDIRS)
-
-$(SUBDIRS):
-	@+$(MAKE) -C $@
-
-clean:
-	@echo [CLEAN]
-	@rm -rf ../bin ../obj/
+include $(TOPDIR)/make/top.mk
+include $(TOPDIR)/make/rules.mk
